--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2869,7 +2869,7 @@ body:not(.sidebar-mini) .sidebar-style-2 .sidebar-menu li.active ul.dropdown-men
   font-size: 16px;
 }
 
-.invalid-name, .invalid-surname, .invalid-address, .invalid-citizenId, .invalid-format-citizenId, .invalid-titleAsset,
+.invalid-title, .invalid-name, .invalid-surname, .invalid-address, .invalid-citizenId, .invalid-format-citizenId, .invalid-titleAsset,
 .invalid-category, .invalid-serialno, .invalid-price, .invalid-interestRate, .invalid-format-interestRate {
   display: none;
   font-size: 12px;
