--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2879,3 +2879,7 @@ body:not(.sidebar-mini) .sidebar-style-2 .sidebar-menu li.active ul.dropdown-men
 .require-input {
   border-color: red !important;
 }
+
+#customerTable tr {
+  cursor: pointer;
+}
