--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2870,7 +2870,8 @@ body:not(.sidebar-mini) .sidebar-style-2 .sidebar-menu li.active ul.dropdown-men
 }
 
 .invalid-title, .invalid-name, .invalid-surname, .invalid-address, .invalid-citizenId, .invalid-format-citizenId, .invalid-titleAsset,
-.invalid-category, .invalid-serialno, .invalid-price, .invalid-interestRate, .invalid-format-interestRate {
+.invalid-category, .invalid-serialno, .invalid-price, .invalid-interestRate, .invalid-format-interestRate ,.invalid-fullname,
+.invalid-username, .invalid-password, .invalid-confirmPassword, .invalid-access, .invalid-format-confirmPassword {
   display: none;
   font-size: 12px;
   color: red;
