--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2830,17 +2830,17 @@ body:not(.sidebar-mini) .sidebar-style-2 .sidebar-menu li.active ul.dropdown-men
   vertical-align: middle;
 }
 
-#redeemPrice {
+/* #redeemPrice {
   color: red;
   font-size: 16px;
   font-weight: bold;
-}
+} */
 
-#price {
+/* #price {
   color: orange;
   font-size: 16px;
   font-weight: bold;
-}
+} */
 
 #modalPledgeTicketID {
   color: green;
